--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "promise": "^7.1.1",
-    "sparklite": "^1.0.53"
+    "sparklite": "^1.0.53",
+    "mongoose": "^4.9.3"
   },
   "engines": {
     "node": "7.6.0"
