--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "promise": "^7.1.1",
     "sparklite": "^1.0.53",
-    "mongoose": "^4.9.3"
+    "mongoose": "^4.9.3",
+    "splunk-sdk":"^1.8.2"
+
   },
   "engines": {
     "node": "7.6.0"
