--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "promise": "^7.1.1",
     "sparklite": "^1.0.53",
     "mongoose": "^4.9.3",
-    "splunk-sdk":"^1.8.2"
+    "splunk-sdk":"^1.8.2",
+    "bluebird":"^3.5.0"
 
   },
   "engines": {
