--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "DoloresBot",
   "version": "0.0.1",
   "dependencies": {
-    "promise": "^7.1.1",
-    "sparklite": "^1.0.53",
+    "bluebird": "^3.5.0",
     "mongoose": "^4.9.3",
-    "splunk-sdk":"^1.8.2",
-    "bluebird":"^3.5.0"
-
+    "promise": "^7.1.1",
+    "request-promise": "^4.2.0",
+    "sparklite": "^1.0.53",
+    "splunk-sdk": "^1.8.2"
   },
   "engines": {
     "node": "7.6.0"
