adding non primisified sleep for debug

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "request-promise": "^4.2.0",
     "sparklite": "^1.0.53",
     "splunk-sdk": "^1.8.2",
-    "sleep-promise":"^2.0.0"
+    "sleep-promise":"^2.0.0",
+    "sleep":"^5.1.0"
   },
   "engines": {
     "node": "7.6.0"
