--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "mongoose": "^4.9.3",
+    "node-schedule": "^1.2.1",
     "promise": "^7.1.1",
     "request-promise": "^4.2.0",
     "sleep": "^5.1.1",
