method to create a new hash to the stack traces

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "request-promise": "^4.2.0",
     "schedule": "^0.1.0",
     "sparklite": "^1.0.53",
-    "splunk-sdk": "^1.8.2"
+    "splunk-sdk": "^1.8.2",
+    "md5":"^2.2.1"
   },
   "engines": {
     "node": "7.6.0"
